[gd_scene load_steps=29 format=3 uid="uid://dv34skp6agxhm"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_qr6qb"]
[ext_resource type="Texture2D" uid="uid://da4d8xtq0spig" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Ship3/Exhaust/normal/exhaust1.png" id="2_58hbh"]
[ext_resource type="Texture2D" uid="uid://c7g1fpmqd7035" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Ship3/Exhaust/normal/exhaust2.png" id="3_sbyp7"]
[ext_resource type="Texture2D" uid="uid://vfo6hnixoiyh" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Ship3/Ship3.png" id="4_t853r"]
[ext_resource type="Texture2D" uid="uid://cbb4ynexqq44x" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Ship3/Exhaust/normal/exhaust3.png" id="4_wg8po"]
[ext_resource type="Texture2D" uid="uid://caufmj8lbl6a" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Ship3/Exhaust/normal/exhaust4.png" id="5_g015p"]
[ext_resource type="Texture2D" uid="uid://b483mt4yoibd1" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Ship3/Exhaust/turbo/exhaust1.png" id="6_le4o6"]
[ext_resource type="Texture2D" uid="uid://dsw74o6fa6bt8" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Ship3/Exhaust/turbo/exhaust2.png" id="7_bq56t"]
[ext_resource type="Texture2D" uid="uid://0e8urk8oaksb" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Ship3/Exhaust/turbo/exhaust3.png" id="8_e8ft4"]
[ext_resource type="Texture2D" uid="uid://pg1urlkr2ru4" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Ship3/Exhaust/turbo/exhaust4.png" id="9_2fsdf"]
[ext_resource type="AudioStream" uid="uid://cjng2ueyt1igr" path="res://resources/freesound/268168__shaun105__laser.wav" id="11_34fei"]
[ext_resource type="Texture2D" uid="uid://ci8a0i5x20c8d" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Shot3/shot3_1.png" id="12_83sqk"]
[ext_resource type="Texture2D" uid="uid://qwgd1oxof03p" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Shot3/shot3_2.png" id="13_ojadk"]
[ext_resource type="Texture2D" uid="uid://cj03bm0r1ojcq" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Shot3/shot3_3.png" id="14_n8cqf"]
[ext_resource type="Texture2D" uid="uid://cn372l18cxfb" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Explosion1/Explosion1_1.png" id="15_3gtkm"]
[ext_resource type="Texture2D" uid="uid://dxhswjoy7myvy" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Explosion1/Explosion1_2.png" id="16_is13f"]
[ext_resource type="Texture2D" uid="uid://bkrhmt6booja1" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Explosion1/Explosion1_3.png" id="17_3r3cc"]
[ext_resource type="Texture2D" uid="uid://lu67myprnl4l" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Explosion1/Explosion1_4.png" id="18_jq7f5"]
[ext_resource type="Texture2D" uid="uid://cb015fnl2wom6" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Explosion1/Explosion1_5.png" id="19_isawn"]
[ext_resource type="Texture2D" uid="uid://dfq7kieti72gs" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Explosion1/Explosion1_6.png" id="20_x3u5v"]
[ext_resource type="Texture2D" uid="uid://bwb6h7s7642xp" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Explosion1/Explosion1_7.png" id="21_3h25j"]
[ext_resource type="Texture2D" uid="uid://deg30cf4ohfog" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Explosion1/Explosion1_8.png" id="22_ccx22"]
[ext_resource type="Texture2D" uid="uid://5fc771b3vyui" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Explosion1/Explosion1_9.png" id="23_mc4cs"]
[ext_resource type="Texture2D" uid="uid://c2qdky15ohxeg" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Explosion1/Explosion1_10.png" id="24_3dt42"]
[ext_resource type="Texture2D" uid="uid://b05pmf606day7" path="res://resources/free-pixel-art-enemy-spaceship-2d-sprites/Explosion1/Explosion1_11.png" id="25_xfbml"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uni5j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_58hbh")
}, {
"duration": 1.0,
"texture": ExtResource("3_sbyp7")
}, {
"duration": 1.0,
"texture": ExtResource("4_wg8po")
}, {
"duration": 1.0,
"texture": ExtResource("5_g015p")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_le4o6")
}, {
"duration": 1.0,
"texture": ExtResource("7_bq56t")
}, {
"duration": 1.0,
"texture": ExtResource("8_e8ft4")
}, {
"duration": 1.0,
"texture": ExtResource("9_2fsdf")
}],
"loop": true,
"name": &"turbo",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_lnpvr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_ojadk")
}, {
"duration": 1.0,
"texture": ExtResource("12_83sqk")
}, {
"duration": 1.0,
"texture": ExtResource("14_n8cqf")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_d1jhe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_3gtkm")
}, {
"duration": 1.0,
"texture": ExtResource("16_is13f")
}, {
"duration": 1.0,
"texture": ExtResource("17_3r3cc")
}, {
"duration": 1.0,
"texture": ExtResource("18_jq7f5")
}, {
"duration": 1.0,
"texture": ExtResource("19_isawn")
}, {
"duration": 1.0,
"texture": ExtResource("20_x3u5v")
}, {
"duration": 1.0,
"texture": ExtResource("21_3h25j")
}, {
"duration": 1.0,
"texture": ExtResource("22_ccx22")
}, {
"duration": 1.0,
"texture": ExtResource("23_mc4cs")
}, {
"duration": 1.0,
"texture": ExtResource("24_3dt42")
}, {
"duration": 1.0,
"texture": ExtResource("25_xfbml")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 12
motion_mode = 1
script = ExtResource("1_qr6qb")

[node name="Exhaust" type="AnimatedSprite2D" parent="."]
position = Vector2(-55, 0)
sprite_frames = SubResource("SpriteFrames_uni5j")
animation = &"normal"

[node name="Ship" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("4_t853r")
region_enabled = true
region_rect = Rect2(21, 44, 86, 39)

[node name="ShotPoint" type="Marker2D" parent="."]
position = Vector2(46, 7)

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-16, -18, -15, -14, -18, -11.2, -21.5, -12.9, -27.4, -13.5, -32.5, -13.5, -32.5, -7.8, -36, -5, -39, -5, -39, 4, -35, 4, -34, 12, -27.2, 12.5, -22.4, 12.5, -18.3, 8.5, -15.6, 10.5, -19, 16, 16, 16, 21, 11, 28, 11, 28, 15, 26, 19, 32, 19, 34.7, 13.5, 37.5, 13.5, 37.5, -1.7, 24.5, -11.8, 15.3, -16.5, 6.4, -16.5, 2, -13, -6, -13)

[node name="ShotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_34fei")

[node name="ShotOutEffect" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(71, 6)
sprite_frames = SubResource("SpriteFrames_lnpvr")

[node name="ShipExplosion" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_d1jhe")

[connection signal="animation_finished" from="ShotOutEffect" to="." method="_on_shot_out_effect_animation_finished"]
